fixed header visibility on iphone 5/SE

--- a/src/App.sass
+++ b/src/App.sass
@@ -76,6 +76,7 @@ html
             width: 16rem
             margin: auto
             margin-bottom: 3rem
+            margin-top: 3rem
 
         
         .container
@@ -245,6 +246,8 @@ html
         background-color: hsl(185, 41%, 97%)
         color: rgb(27,70,74)
         text-align: right
+        width: 7.5rem
+        height: 3rem
 
     #custom::placeholder
         text-align: center
